--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
 			</div>
 			<footer class="footer-fix radio-footer">
 				<button class="radio-stop fa fa-play"></button>
+				<div class="volume">
+					<i class="fa fa-volume-up" aria-hidden="true"></i>
+					<input class="volume__stat" type="range" step="1" value="0" max="100">
+				</div>
 			</footer>
 		</article>
 	</main>
