--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
 	<a href="index.html">
-		<h1 class="header"><span class="red-text">Я</span>Tunes</h1>
+		<h1 class="header"><span class="red-text">MY</span>Tunes</h1>
 	</a>
 
 	<main>
